--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
-    "jest": "^24.7.1"
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
